src/test/compile-fail/once-fn-subtyping.rs
fn main() {
    let f: &once fn() = ||();
    let g: &fn() = f;  //~ ERROR mismatched types
    let h: &fn() = ||();
    let i: &once fn() = h;  // ok
}

